<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileAddFragment">

    <EditText
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:inputType="text"
        android:autofillHints=""
        android:hint="@string/profile_name"
        />

    <RelativeLayout
        android:id="@+id/imageview_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_thumbnail_background"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/overlay_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:contentDescription="@string/profile_thumbnail_background"
        android:layout_alignParentTop="true"
        />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/profile_add_face_bounds_explanation"
        android:width="200dp"
        android:maxWidth="200dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/profile_thumbnail_face_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:inputType="number"
            android:autofillHints=""
            android:hint="@string/profile_thumbnail_face_left"
            />

        <EditText
            android:id="@+id/profile_thumbnail_face_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:inputType="number"
            android:autofillHints=""
            android:hint="@string/profile_thumbnail_face_right"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

    <EditText
        android:id="@+id/profile_thumbnail_face_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:inputType="number"
        android:autofillHints=""
        android:hint="@string/profile_thumbnail_face_top"
        />

    <EditText
        android:id="@+id/profile_thumbnail_face_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:inputType="number"
        android:autofillHints=""
        android:hint="@string/profile_thumbnail_face_bottom"
        />
    </LinearLayout>

    <Button
        android:id="@+id/profile_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/profile_save"
        />

</LinearLayout>